styled and added content to home, about, and directory pages. Create footer and made minor site-wide styling changes.

--- a/app/components/footer/footer.component.html
+++ b/app/components/footer/footer.component.html
@@ -1,5 +1,13 @@
 <footer class="footer">
-      <div class="container">
-        <p class="text-muted">Place sticky footer content here.</p>
+    <div class="container">
+      <div class="text-muted">
+          <p class=" col-xs-6 col-md-4"> Home | Term and Conditions | DONATE |</p>
+          <p class=" col-xs-6 col-md-5">2520 North University Ave. Suite 100 Provo, UT</p>
+          <p class=" col-xs-6 col-md-3">801.735.1860</p>
+          <div>
+          <p class="col-xs-12 col-md-8">Copyright Academy for Creating Enterprise 501 &#169;</p>
+          <p class="col-xs-6 col-md-3" style="float:right;">SOCIAL MEDIA ICONS</p>
+          </div>
+        </div>
       </div>
 </footer>
