--- a/app/components/navbar/navbar.component.html
+++ b/app/components/navbar/navbar.component.html
@@ -50,12 +50,12 @@
             <a routerLink="/chapterleaders" class="dropbtn">Chapter Leaders</a>
             <div class="dropdown-content">
                 <a href="#">Chapter Leader Training</a>
-                <a href="#">Monthly Agendas</a>
+                <a routerLink="/monthlyagendas">Monthly Agendas</a>
                 <a href="#">Reporting</a>
             </div>
         </li>
         <li class="dropdown">
-            <a routerLink="/businessresources" class="dropbtn">Business Resources</a>
+            <a routerLink="/businessresources" class="dropbtn">Business Education</a>
             <div class="dropdown-content">
                 <a href="#">Search</a>
                 <a href="#">Grow My Business Curriculum</a>
@@ -65,7 +65,7 @@
             </div>
         </li>
         <li><a routerLink="/contact">Contact Us</a></li>
-        <li><a routerLink="/">Donate</a></li>
+        <li><a href="https://www.paypal.com/donate/?token=Hv4dgMx8m3QoNEFok6mHqD-Hr5fY6V-KXYSq_YdLEh2UiK_JKsBjzZSyple-uSEx1xk7AW" target="_blank">Donate</a></li>
         </ul>
     </div><!--/.nav-collapse -->
     </div>
