--- a/app/components/pages/about.component.html
+++ b/app/components/pages/about.component.html
@@ -1,2 +1,21 @@
-<h3>About</h3>
-<p>This is the about page</p>
+<div class="album">
+
+        <div style="margin:0 auto; text-align:center; max-width:70rem;">
+            <h1 class="text-primary">Our Mission</h1>
+                    <hr>
+            <p>We strive to help members of The Church of Jesus Christ of Latter-day Saints and others in developing countries launch and grow successful businesses that lift families out of poverty and put them firmly on the path to self-reliance.</p>
+        </div>
+</div>
+<div class="container">
+<br>
+<br>
+    <h1 style="margin:0 auto; text-align:center; max-width:70rem" class="text-primary">
+        Frequently Asked Questions
+    </h1>
+    <h1 class="faquestion">What is The Academy for Creating Enterprise?</h1>
+    <h1 class="faquestion">How successful are graduates?</h1>
+    <h1 class="faquestion">How is this non-profit organization funded?</h1>
+    <h1 class="faquestion">Why does The Academy focus on training returned missionaries?</h1>
+    <h1 class="faquestion">How much does enrollment cost and what are donations used for?</h1>
+    <h1 class="faquestion">How can I help?</h1>
+</div>
