--- a/app/components/jumbotron/jumbotron.component.html
+++ b/app/components/jumbotron/jumbotron.component.html
@@ -1,7 +1,7 @@
-<div class="jumbotron">
+<div class="jumbotron text-xs-center">
         <div class="container">
-            <h1>{{jbtHeading}}</h1>
-            <p>{{jbtText}}</p>
+            <h1 class="jumbotron-heading">{{jbtHeading}}</h1>
+            <p class="lead text-muted">{{jbtText}}</p>
             <p><a href="{{jbtBtnUrl}}" class="btn btn-primary btn-lg">{{jbtBtnText}}</a></p>
         </div>    
 </div>
