--- a/app/components/pages/home.component.html
+++ b/app/components/pages/home.component.html
@@ -1,3 +1,36 @@
 <jumbotron></jumbotron>
-<h3>Welcome</h3>
-<p>This is the home page</p>
+<div class="album">
+    <div class="container">
+        <div class="row">
+            <div class="card">
+                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
+                <p>This is a sample text you can put here explaining the picture above, something nifty that will attract people and be informational.
+                </p>
+            </div>
+            <div class="card">
+                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
+                <p>This is a sample text you can put here explaining the picture above, something nifty that will attract people and be informational.
+                </p>
+            </div>
+            <div class="card">
+                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
+                <p>This is a sample text you can put here explaining the picture above, something nifty that will attract people and be informational.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <hr>
+    <div class="col-xs-6 right">
+        <h1>One Section</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mollis porttitor tincidunt. Nullam eget bibendum tortor. Etiam ac commodo dolor. Vestibulum sem mauris, auctor sed lectus a, viverra venenatis dolor. Nunc non est nulla. Vestibulum metus lectus, accumsan sed maximus ac, rhoncus nec enim. Suspendisse lobortis nec neque ac vulputate. Nullam vel varius odio.</p>
+    </div>
+    <div class="col-xs-6">
+        <h1>Second Section</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mollis porttitor tincidunt. Nullam eget bibendum tortor. Etiam ac commodo dolor. Vestibulum sem mauris, auctor sed lectus a, viverra venenatis dolor. Nunc non est nulla. Vestibulum metus lectus, accumsan sed maximus ac, rhoncus nec enim. Suspendisse lobortis nec neque ac vulputate. Nullam vel varius odio.</p>
+    </div>
+</div>
+<hr>
+<br />
