--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
 }
 
 .footer {
-  position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
@@ -11,9 +10,43 @@
   background-color: #f5f5f5;
 }
 
+.jumbotron-heading {
+  font-weight: 50px;
+}
+.jumbotron .container {
+  max-width: 80rem;
+}
+.jumbotron p:last-child {
+  margin-bottom: 0;
+}
+
+hr{
+    
+    border-bottom: 1px solid #b3a3a3;
+}
+
+.jumbotron {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  margin-bottom: 0;
+  background-color: #fff;
+}
+
+.text-primary{
+    color:#b21818;
+}
+
+
+.right{
+    border-right: 1px solid #eef;
+}
+.top{
+    border-top: 1px solid #a94442;
+}
+
 li a, .dropbtn {
     display: inline-block;
-    color: gray;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -43,6 +76,7 @@ li.dropdown {
 
 .dropdown:hover .dropdown-content {
     display: block;
+    z-index: 1;
 }
 
 .home-navbar{
@@ -54,5 +88,49 @@ a:focus, a:hover{
 }
 
 .navbar-brand{
-    color:grey;
+    color:black;
+}
+
+.btn-primary{
+    background-color: #a94442;
+    border-color:darkred;
+}
+
+.btn-primary:hover{
+background-color:red;
+    border-color:darkred;
+}
+
+/*home page specific*/
+
+.album {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #f7f7f7;
+}
+
+
+.card {
+  float: left;
+  width: 33.333%;
+  padding: .75rem;
+  margin-bottom: 2rem;
+  border: 0;
+}
+
+.card-text {
+  font-size: 85%;
+}
+
+.card > img {
+  margin-bottom: .75rem;
+}
+
+/*about us specific*/
+
+.faquestion{
+    padding-top:25px;
+    padding-bottom:10px;
+    border-bottom: 1px solid #b3a3a3;
+    font-size:18px;
 }
