added pages, agendas and outlines, minor edits to existing css classes

--- a/app/components/navbar/navbar.component.html
+++ b/app/components/navbar/navbar.component.html
@@ -57,11 +57,11 @@
         <li class="dropdown">
             <a routerLink="/businessresources" class="dropbtn">Business Education</a>
             <div class="dropdown-content">
-                <a href="#">Search</a>
-                <a href="#">Grow My Business Curriculum</a>
-                <a href="#">Business Setup</a>
-                <a href="#">Business Management</a>
-                <a href="#">Business/Social Skills</a>
+                <a routerLink="/legalities">Legalities</a>
+                <a routerLink="/building">Building and Maintaining</a>
+                <a routerLink="/psychology">Psychology</a>
+                <a routerLink="/finances">Finances</a>
+                <a routerLink="/hiring">Hiring</a>
             </div>
         </li>
         <li><a routerLink="/contact">Contact Us</a></li>
