--- a/app/components/pages/subpages/agenda.component.html
+++ b/app/components/pages/subpages/agenda.component.html
@@ -10,10 +10,94 @@
         <p>These agendas provide lesson material for each of these business skills.</p>
     </div>
 </div>
+<div class="red-background">
 <div class="container">
-   <h4>March - Make it Easy to Buy</h4> 
-   <h4>May - Start Small, Think Big</h4>
-   <h4>June - Sell What People Are Buying</h4>
-   <h4>July - Know How to Create Customer Relationships</h4>
-   <h4>August - Know Why Customers Buy From You</h4>
+    <h1 class="text-primary month">March - Make it Easy to Buy</h1>
+    <h4 class="docs"><a href="../app/monthlyagendas/March2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
+</div>
+</div>
+<div class="container" style="padding-top:3rem;">
+    <h1 class="text-primary month">May - Start Small, Think Big</h1>
+            <div class="row">
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/May2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
+            </div>
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/May2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
+            </div>
+        </div>
+</div>
+<div class="album" style="padding-bottom:0 !important;">
+    <div class="container">
+        <h1 class="text-primary month">June - Sell What People Are Buying</h1>
+            <div class="row">
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/June2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
+            </div>
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/June2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="red-background">
+    <div class="container">
+        <h1 class="text-primary month">July - Know How to Create Customer Relationships</h1>
+            <div class="row">
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/July2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
+            </div>
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/July2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container" style="padding-top:3rem;">
+    <h1 class="text-primary month">August - Know Why Customers Buy From You</h1>
+            <div class="row">
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/August2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
+            </div>
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/August2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
+            </div>
+        </div>
+</div>
+<div class="album" style="padding-bottom:0 !important;">
+    <div class="container">
+        <h1 class="text-primary month">October- Integrity Before Profit</h1>
+            <div class="row">
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/October2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
+            </div>
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/October2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="red-background">
+    <div class="container">
+        <h1 class="text-primary month">September- Value Your Customers</h1>
+            <div class="row">
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/September2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
+            </div>
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/September2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container" style="padding-top:3rem;">
+    <h1 class="text-primary month">November - Purchase in Bulk</h1>
+            <div class="row">
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/November2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
+            </div>
+            <div class="col-xs-6">
+                <h4 class="docs"><a href="../app/monthlyagendas/November2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
+            </div>
+        </div>
 </div>
