added content to the pages under education resources

--- a/app/components/navbar/navbar.component.html
+++ b/app/components/navbar/navbar.component.html
@@ -55,7 +55,7 @@
             </div>
         </li>
         <li class="dropdown">
-            <a routerLink="/businessresources" class="dropbtn">Business Education</a>
+            <a class="dropbtn">Business Education</a>
             <div class="dropdown-content">
                 <a routerLink="/legalities">Legalities</a>
                 <a routerLink="/building">Building and Maintaining</a>
