finished the content on about us page, played with styling

--- a/app/components/pages/about.component.html
+++ b/app/components/pages/about.component.html
@@ -1,21 +1,316 @@
+
+
 <div class="album">
 
-        <div style="margin:0 auto; text-align:center; max-width:70rem;">
+        <div class="container">
             <h1 class="text-primary">Our Mission</h1>
                     <hr>
             <p>We strive to help members of The Church of Jesus Christ of Latter-day Saints and others in developing countries launch and grow successful businesses that lift families out of poverty and put them firmly on the path to self-reliance.</p>
         </div>
 </div>
+
+<div class="container">
+    <div class="sectiontitle">
+        <h1 class="text-primary">Articles of Belief</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mollis porttitor tincidunt. Nullam eget bibendum tortor. Etiam ac commodo dolor. Vestibulum sem mauris, auctor sed lectus a, viverra venenatis dolor. Nunc non est nulla. Vestibulum metus lectus, accumsan sed maximus ac, rhoncus nec enim. Suspendisse lobortis nec neque ac vulputate. Nullam vel varius odio.</p>
+    </div>
+    <ol style="max-width:70rem; margin: 0 auto;">
+        <li>Everyone has the right to a standard of living adequate for the health and well being of himself and of his family, including water, food, clothing, housing and medical care.
+        </li>
+        <li>There are individuals in many nations throughout the world that do not enjoy these rights because of the limited availability of employment.
+        </li>
+        <li>This job shortage is caused in part by a lack of nationwide companies, an abundance of young people entering the job market, and preferential treatment by the majority of employers toward certain classes of people, certain families, and certain ethnic and religious backgrounds.
+        </li>
+        <li> Many microenterprisers in underdeveloped countries are forced to start businesses because of this job shortage. These microenterprisers are sometimes called necessity entrepreneurs. Without training, their learning curves are very steep and painful, and often lead to disappointment and failure.
+        </li>
+        <li>The best way to help men and women living in underdeveloped countries prosper is to teach them how to create their own jobs through entrepreneurship.
+        </li>
+        <li>We believe in self-reliance. Through understanding the value, desirability, and attainability of self-reliance, our students are motivated and taught how to provide for the needs of their families, fulfill their callings in the Church, stay in their home countries, and strengthen their communities.
+        </li>
+        <li>Self-reliance is fostered when students are responsible to pay some portion of the cost to attend The Academy.
+        </li>
+        <li>All participants must be taught the Culture of Success, which is best understood and taught through the adoption of the 25 rules of thumb listed in the four volumes of “Where There Are No Jobs” curriculum.
+        </li>
+        <li>An essential part of entrepreneurial training is to immediately involve the students in an Income Generating Activity that serves to change their mindset regarding increasing one’s financial status or becoming “profitable servants” as taught in the parable of the talents. We teach the Culture of Success within the Gospel culture.
+        </li>
+        <li>Local entrepreneurs should be invited to teach and mentor in the classroom and at chapter/learning centers.
+        </li>
+        <li>Whenever possible, residential students should have the blessing of attending weekly, 90-minute institute classes taught by trained CES personnel. Each day starts with a prayer and scripture study.
+        </li>
+        <li>Individual members of the LDS Church have a responsibility to help fellow members “prosper in the land” as promised in the Book of Mormon.
+        </li>
+        <li>Returned missionaries make the best students of entrepreneurship because of the skills they spent 18-24 months developing on their missions. These mission-acquired skills include planning, goal setting, time management, “sales” techniques, communication skills, and the value of a strong moral ethic. The Academy therefore seeks to train returned missionaries first, then Church members who have small businesses, and finally the general public.</li>
+        <li>LDS Employment Resource Centers are excellent referral sources as well as facilities for trainings and chapter/learning center meetings.
+        </li>
+        <li>Local leadership is essential to continual success. A local, in-country staff should be hired, paid and managed in order to keep consistency in the training and support groups. They will be supported and managed by The Called2Serve Foundation, a 501(c)(3) headquartered in Provo, Utah.
+        </li>
+        <li>When the students return home from the Academy, they should teach others in their community the basic business skills they learned, like the 25 rules of thumb.  
+        </li>
+        <li>The Academy believes that some graduates should participate in an internship program either as experience providers or as interns.
+        </li>
+        <li>In order to enable Academy alumni to have optimal opportunities to succeed, local chapters/learning centers should be established. These chapters will evolve into support and learning centers where basic training, advanced training and mentoring sessions will be held regularly.
+        </li>
+        <li>Alumni should be recognized for their individual successes and should celebrate together in Entrepreneurial Academy Awards to be held every other year.  The Yamagata Foundation and BYU Hawaii have sponsored these celebrations.
+        </li>
+        <li>The Academy founders, without question, believe that they have repeatedly seen the hand of the Lord in this work.  They feel called and sustained by His mercy, love and blessings.
+        </li>
+    </ol>
+</div>
+
+<div class="album">
+    <div class="container">
+        <div class="sectiontitle">
+            <h1 style="text-primary">Our Curriculum</h1>
+            <hr >
+            <p>Leonardo DaVinci once said that “the ultimate sophistication is simplicity”.  At the Academy for Creating Enterprise, we agree. Our curriculum is simple, but that is why it is so effective. As part of our  unique Micro Enterprise training, we teach 25 universally applicable business rules called the “Rules of Thumb”,  (highlighted in chart below.) These rules are guiding stars throughout Where There Are no Jobs, a unique six-volume series of curriculum developed by Academy Founder Stephen Gibson. </p>
+    </div>
+<div class="table-responsive">    
+<table class="table table-hover" style="max-width:80rem;margin:0 auto;">
+<tbody>
+    <tr>
+        <td valign="top" width="253">
+        <p align="center">Rule</p>
+        </td>
+        <td valign="top" width="332">
+        <p align="center">Explanation</p>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top" width="253">
+            <p>1.       Sell What the Market Will Buy</p>
+        </td>
+        <td valign="top" width="332">
+            <p>Solving a critical, recurring problem is the best way to create a business.</p>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top" width="253">
+            <p>2.       Practice Separate Entities</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Keep personal and business money separate.</p>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top" width="253">
+            <p>3.       Start Small, Think Big</p>
+        </td>
+        <td valign="top" width="332">
+            <p>Learn basics when small and less costly. Then grow.</p>
+        </td>
+      </tr>
+    <tr>
+        <td valign="top" width="253">
+            <p>4.       Be Nice Later</p>
+        </td>
+        <td valign="top" width="332">
+            <p>Don’t give your product, services, or business capital away to friends and relatives.</p>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top" width="253">
+            <p>5.       Keep Good Records</p>
+        </td>
+        <td valign="top" width="332">
+            <p>Success comes from beating yesterday’s sales and profit records.</p>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top" width="253">
+            <p>6.       Pay Yourself a Livable Salary</p>
+        </td>
+        <td valign="top" width="332">
+            <p>This eliminates taking all the cash out of the business for living expenses.</p>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top" width="253">
+            <p>7.       Buy Low, Sell High</p>
+        </td>
+        <td valign="top" width="332">
+            <p>The bigger the difference, the greater the potential profit.</p>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top" width="253">
+            <p>8.       Don’t Eat Your Inventory</p>
+        </td>
+        <td valign="top" width="332">
+            <p>Consuming inventory or seed capital will quickly kill your business.</p>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top" width="253">
+        <p>9.       Use Multiple Suppliers</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Negotiating with several suppliers for the best price is critical to success.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>10.    Buy on Credit, Sell for Cash</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Selling product before payment to suppliers increases cash flow.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>11.    Purchase in Bulk</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Suppliers usually sell products cheaper if purchased in volume.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>12.    Use Suggestive Selling</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Suggest to each customer other items they might like or need.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>13.    Increase Sales, Decrease Costs</p>
+        </td>
+        <td valign="top" width="332">
+        <p>As the gap grows bigger, net profits also grow bigger.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>14.    Turn Your Inventory Often</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Profit is made every time inventory is priced right and sold.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>15.    Value Your Customers</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Keeping them coming back and buying more is a key to success.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>16.    Differentiate Your Business</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Give customers a reason to return; better, cheaper, faster.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>17.    Hire Slow, Fire Fast</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Screen potential employees carefully. Terminate bad hires quickly.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>18.    Inspect More, Expect Less</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Consistent performance comes from inspecting, not expecting.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>19.    Have Written Agreements with Partners, Suppliers, Landlords and Employees</p>
+        </td>
+        <td valign="top" width="332">
+        <p>The dullest pencil is better than the sharpest memory.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>20.    Work on Your Business 10 Hours a Day, Five and a Half Days a Week</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Anything less is a hobby.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>21.    Practice Kaizen</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Kaizen means continual improvement. This is vital to income growth.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>22.    Make a Profit Every Day</p>
+        </td>
+        <td valign="top" width="332">
+        <p>If a work day goes by without profit, it’s a loss.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>23.    Work <i>on</i> Your Business, Not Just <i>in</i>Your Business</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Stand back and watch, then fix immediately.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>24.    Write Daily/Weekly Business Goals</p>
+        </td>
+        <td valign="top" width="332">
+        <p>Stretching for more will move business forward faster.</p>
+        </td>
+        </tr>
+        <tr>
+        <td valign="top" width="253">
+        <p>25.    Focus, Focus, Focus</p>
+        </td>
+        <td valign="top" width="332">
+        <p>A concentrated effort on one venture pays huge returns.</p>
+        </td>
+    </tr>
+</tbody>
+</table>
+    </div>
+
+</div>
+</div>
+
+
+<div class="container">
+    <h1 class="text-primary">Our Team</h1>
+                    <hr>
+</div>
+
+
 <div class="container">
 <br>
 <br>
-    <h1 style="margin:0 auto; text-align:center; max-width:70rem" class="text-primary">
+
+
+
+    <h1 class="text-primary sectiontitle">
         Frequently Asked Questions
     </h1>
     <h1 class="faquestion">What is The Academy for Creating Enterprise?</h1>
+    <div class="panel">The Academy is a non-profit organization based in Utah that seeks to alleviate poverty through micro enterprise education. During a 6-week program, students learn how to become self-reliant by starting their own small businesses. Although not funded or sponsored by The Church of Jesus Christ of Latter-day Saints, many students who attend The Academy are LDS returned missionaries.</div>
     <h1 class="faquestion">How successful are graduates?</h1>
+    <div class="panel">More than 80 percent of student graduates are now earning a living and on their way to self-reliance. Roughly 60 percent currently operate their own businesses and another 22 percent are now earning a living working for others. Some graduates return to college after the Academy.
+    </div>
     <h1 class="faquestion">How is this non-profit organization funded?</h1>
+    <div class="panel">Donations come from 200 families in the United States, Mexico and the Philippines. The majority of monetary donations come from 25 of the 200 families. The Academy is not sponsored nor endorsed by any religious, academic or civic institution.
+    </div>
     <h1 class="faquestion">Why does The Academy focus on training returned missionaries?</h1>
+    <div class="panel">Returned missionaries already have a great foundation of success to build upon. Mission service gives young people experience in areas such as time management, goal setting, perseverance and leadership training. After graduating from the Academy, each of the students agree to teach what they have learned in their churches and communities. In fact, several graduates in the Philippines have taught at colleges and universities near their homes.
+    </div>
     <h1 class="faquestion">How much does enrollment cost and what are donations used for?</h1>
+    <div class="panel">The six-week course currently costs $600 per student in Mexico and $100 per student in the Philippines. Every student is required to pay at least a portion of this cost. This allows the Academy to provide food, lodging, school supplies and training. A non-profit organization called the Called2Serve Foundation pays the remaining balance. The majority of operating costs are covered by sponsors in the United States and other in-country donors.</div>
     <h1 class="faquestion">How can I help?</h1>
+    <div class="panel">The easiest, fastest and most effective way to help is to donate funds. You can donate here or send your donation to The Called2Serve Foundation, 2520 North University Avenue, Suite 100, Provo, Utah 84604. Our foundation is a charitable 501(c)3 as designated by the IRS. All deductions are allowable on your federal taxes.</div>
 </div>
