--- a/app/components/pages/subpages/building.component.html
+++ b/app/components/pages/subpages/building.component.html
@@ -161,7 +161,7 @@
                 <hr class="hr-style hr-style-red">
                 <p class="resources" style="font-size:15px;"><a href="http://www.forbes.com/sites/yec/2014/04/22/three-ways-to-build-customer-trust/#4fc7eb3e78db" target="_blank" class="resources">First Resource</a></p>
             </div>
-            <div class="col-sm-5 col-md-6  subcategory">
+            <div class=" subcategory">
                 How to Have Great Customer Service
                 <hr class="hr-style hr-style-red">
                 <p class="resources" style="font-size:15px;"><a href="http://www.forbes.com/sites/aileron/2012/11/15/the-10-keys-of-excellent-customer-service/#71bc77f2361f " target="_blank" class="resources">First Resource</a></p>
